--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -19,6 +19,9 @@ window#waybar.empty {
     background: transparent;
     padding: 0;
 }
+window#waybar.empty .modules-center {
+    background-color: transparent;
+}
 
 window > box {
     margin-bottom: 5px;
